"ChangeLog"

# NOTE: the latest CVS tag must appear in the first 10 lines of this ChangeLog.
# This version tag is used in building "cvstag.h" for version identification.

2011-04-11	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-84-64-pr-01-01:
	  First cut of physics-driven placement engine "ipple", 
		compiles, but does nothing yet.
	  Files populated in PR/*.{h,cc}.
	  For now, space will be fixed to 3D, later extendible to N-dimensions.
	  util/ChangeLog: added util/vector_ops.h


2011-04-07	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-84-64-pr-01-00:
	  This branch is for development of a physics-driven
		place-and-route engine, with interactive simulator.  
	  Split up libhacktsim into libhacktprsim, libhacktchpsim, 
		so that new simulator can use generic sim library.
		libhacktsim is no longer tied to the rest of HACKT.  


2011-04-04	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-84-64:
	  Added int/real min/max functions: zmin, zmax, rmin, rmax.
	  Updated test case.


2011-04-03	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-84-63:
	  hacknet: added new option 'emit_node_caps=1' to print nodes'
		parasitic parameters at every level of hierarchy, 
		accumulated over devices and subcircuit connections.
		values: diffusion area, diffusion perimieter, gate area,
			wire area (0 until back-annotation or attribute
			support is added)
	  Documented, test cases added.


2011-04-01	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-84-62:
	  Source cleanup: removed extraneous #ifndef guards in .cc files
		replaced persistent_object_manager calls in
		Object/expr/*_list.cc for ease of maintenance
		and comprehensibility, calling collect_pointer_list,
		write_pointer_list, read_pointer_list, load_once_pointer_list.
	  No regressions.


2011-03-31	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-84-61: